# ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run_tests.yaml
src/: CMakeLists.txt  camera.h  colour.h  image.h  image_writer.h  intersectable.h  intersectable_list.h  main.cpp  material.h  plane.h  ppm_writer.h  ray.h  ray_tracer.h  sphere.h  vec3.h
src/core/: camera.cpp  camera.h  colour.h  image.h  image_writer.h  intersectable.h  material.h  ppm_writer.cpp  ppm_writer.h  primitive.h  ray.cpp  ray.h  ray_tracer.cpp  ray_tracer.h  scene.cpp  scene.h  utilities.h  vec3.cpp  vec3.h
src/materials/: diffuse.cpp  diffuse.h  material.h  refraction.cpp  refraction.h  specular.cpp  specular.h
src/primatives/: intersectable_list.h  plane.h  sphere.h
src/primitives/: plane.h  primitive_list.h  sphere.h
test/: CMakeLists.txt  camera_test.cpp  colour_test.cpp  image_test.cpp  intersectable_list_test.cpp  plane_test.cpp  ppm_writer_test.cpp  ray_test.cpp  sphere_test.cpp  vec3_test.cpp
test/core/: camera_test.cpp  colour_test.cpp  image_test.cpp  ppm_writer_test.cpp  vec3_test.cpp
test/primitives/: intersectable_list_test.cpp  plane_test.cpp  sphere_test.cpp
